--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<span class="word">{{name}}</span> was a <span class="word">{{job_title}}</span> who loved technology. Although he loved parts of his job, he absolutely hated <span class="word">{{tedious_task}}</span> and <span class="word">{{dirty_task}}</span>. So, <span class="word">{{name}}</span> met with his life mentor <span class="word">{{celebrity}}</span> who told him to learn how to <span class="word">{{useless_skill}}</span> with Thinkful. Thinkful didn't offer a course on {{useless_skill}} so he studied programming instead.
 				</br>
 				</br>
-				What a great decision! With his new skills, <span class="word">{{name}}</span> built a(n) <span class="word">{{adjective}}</span> robot named <span class="word">{{obnoxious_celebrity}}</span> that not only loved <span class="word">{{dirty_task}}</span> but did it <span class="word">{{huge_num}}</span> faster.
+				What a great decision! With his new skills, <span class="word">{{name}}</span> built a(n) <span class="word">{{adjective}}</span> robot named <span class="word">{{obnoxious_cele}}</span> that not only loved <span class="word">{{dirty_task}}</span> but did it <span class="word">{{huge_num}}</span> faster.
 			</div>
 		</section>
 	
