--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Neuton' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Arvo' rel='stylesheet' type='text/css'>
-	<script data-require="angular.js@1.3.10" data-semver="1.3.10" src="https://code.angularjs.org/1.3.10/angular.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-animate.js"></script>
-	<script type="text/javascript" src="script.js"></script>
 </head>
 <body ng-controller="ctrl">
 		<header>
@@ -31,7 +27,7 @@
 					Please enter a number greater than 100.
 				</div>
 		</div>
-		<section class="word-bank-container" ng-hide="submitted">
+		<section class="word-bank-container" ng-show="hide">
 			<form name="wordForm" class="inner" ng-submit="submit(wordForm)" novalidate>
 				<div class="inner2">
 					<h2>Select a gender:</h2>
@@ -68,7 +64,10 @@
 				What a great decision! With {{pronouns.p2}} new skills, <span class="word">{{wordBank.name}}</span> built a(n) <span class="word">{{wordBank.adjective}}</span> robot named <span class="word">{{wordBank.obnoxiousCeleb}}</span> that not only loved <span class="word">{{wordBank.dirtyTask}}</span> but did it <span class="word">{{wordBank.hugeNum}}</span> times faster.
 			</div>
 		</section>
-		
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular.min.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.4/angular-animate.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 	
 </body>
 </html>
